New logo, work on footer

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 	<body>
 		<div>
 			<header>
-				<img src="logo.png" alt="Logo">
-				<h2>Zlín</h2>
+				<img src="logo2.png" alt="Logo">
 			</header>
 			<nav>
 				<div class="menu">		
@@ -58,29 +57,33 @@
 					</div>
 					<div class="footer_item2">
 						<div class="fic fi_card1">
-<script src='https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyAjjHxYvllxLCDlMno98jWLt1QqyIT3k88'></script><div style='overflow:hidden;height:290px;width:290px;'><div id='gmap_canvas' style='height:290px;width:290px;'></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div> <a href='https://mapswebsite.net/'>embedding google map</a> <script type='text/javascript' src='https://embedmaps.com/google-maps-authorization/script.js?id=d59f6ad737f223bb2f991a300f3271f49a108ea6'></script><script type='text/javascript'>function init_map(){var myOptions = {zoom:14,center:new google.maps.LatLng(49.22665100329073,17.667145929638647),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(49.22665100329073,17.667145929638647)});infowindow = new google.maps.InfoWindow({content:'<strong>VŠ koleje</strong><br>Štefánikova 2431<br> Zlín<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
+<script src='https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyAjjHxYvllxLCDlMno98jWLt1QqyIT3k88'></script><div style='overflow:hidden;height:295px;width:295px;margin:auto; border: 1px solid #c9c9c9;'><div id='gmap_canvas' style='height:295px;width:295px;'></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div> <a href='https://mapswebsite.net/'>embedding google map</a> <script type='text/javascript' src='https://embedmaps.com/google-maps-authorization/script.js?id=295afee8bcfa0201d490c4510d0469d6453c3e9d'></script><script type='text/javascript'>function init_map(){var myOptions = {zoom:15,center:new google.maps.LatLng(49.22584871144233,17.669227138622997),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(49.22584871144233,17.669227138622997)});infowindow = new google.maps.InfoWindow({content:'<strong>VŠ Kolej UTB</strong><br> VŠ kolej Štefánikova 150<br> Zlín<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
 						</div>
 						<div class="fic fi_card2">
 							<table>
 								<h3>Otevřeno</h3>
-								<tr>
+								<tr id="stripped">
 									<td>Pondělí</td>
 									<td>nonstop</td>
 								</tr>
-								<tr>
+								<tr id="stripped">
 									<td>Úterý</td>
 									<td>nonstop</td>
 								</tr>
-								<tr>
+								<tr id="stripped">
 									<td>Středa</td>
 									<td>nonstop</td>
 								</tr>
-								<tr>
+								<tr id="stripped">
 									<td>Čtvrtek</td>
 									<td>nonstop</td>
 								</tr>
-								<tr>
+								<tr id="stripped">
 									<td>Pátek</td>
+									<td>nonstop</td>
+								</tr>
+								<tr id="stripped">
+									<td>Víkend</td>
 									<td>nonstop</td>
 								</tr>
 							</table>
@@ -89,24 +92,35 @@
 
 							<h3>Kontakt</h3>
 
-							<small>projekt</small>
-							<p>
-								<i class="fa fa-facebook-square" aria-hidden="true"></i>
-								Adéla Trubelíková
-							</p>
-							<i class="fa fa-mobile" aria-hidden="true"></i>
-							<p>987 654 321</p>
-							<p>
-								<i class="fa fa-facebook-square" aria-hidden="true"></i>
-								Eliška Surmařová
-							</p>
-							<i class="fa fa-mobile" aria-hidden="true"></i>
-							<p>987 654 321</p>
+							<table>
+								<tr>
+									<td>
+										<i class="fa fa-facebook-square" aria-hidden="true"></i> 
+										Eliška Surmařová (						
+										<i class="fa fa-mobile" aria-hidden="true"></i>
+										987 654 321)
+									</td>
+								</tr>
+								<tr>									
+									<td>
+										<i class="fa fa-facebook-square" aria-hidden="true"></i> 
+										Adéla Trubelíková (						
+										<i class="fa fa-mobile" aria-hidden="true"></i>
+										987 654 321)
+									</td>
+								</tr>
+								<tr>
+									<td><i class="fa fa-wrench" aria-hidden="true"></i> Tomáš Soukal</td>
+								</tr>
+							</table>
 
-							<small>website</small>
-							<p>Tomáš Soukal</p>
+
+
 						</div>
-						<div class="fic fi_card4">4Lipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+						<div class="fic fi_card4">
+
+							<h3>Lorem</h3>
+							4Lipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
 					</div>
 				</div>
 			</footer>
