New menu icons and FB feed

--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
 	</head>
 
 	<body>
+
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v2.7";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+
 		<div>
 			<header>
 				<img src="logo2.png" alt="Logo">
@@ -30,14 +41,23 @@
 				<div class="menu">		
 					<a href="" class="menu_item1"></a>
 					<a href="" class="menu_item2"></a>
-					<a href="" class="menu_item3"></a>
+					<!--<a href="" class="menu_item3"></a>-->
 					<a href="" class="menu_item4"></a>
 					<a href="/blog" class="menu_item5"></a>	
 				</div>		
 			</nav>
 			<main>
+					<div class="stripped_line"></div>
+				<h2>Pro všechny</h2>
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.				
+					Naším cílem je zpřístupnění lednice veřejnosti. Každý může do ní cokoli dát, nebo naopak si z ní cokoli vzít. Projekt nechceme, jak by se mohlo na první pohled zdát, stavět jen na pomoci sociálně slabším, naopak ho představujeme celé veřejnosti – mladým, kteří mají po noční zábavě hlad, podnikatelům, kteří kvůli dlouhé práci nestihli nakoupit na večeři a vášnivým kuchařkám, kterým chybí strávníci. 
+
+				</p>
+				<p>
+					Stejný nápad byl již vyzkoušen na Slovensku, kde měli dočasnou <a href="http://bratislava.dnes24.sk/docasna-verejna-spajza-na-ulici-viete-ako-funguje-a-komu-ma-pomoct-188050">Veřejnou špajzku</a>.  První lednice v České republice se nachází v Českých Budějovicích ve dvoře Literární kavárny <a href="http://www.mesicvedne.cz/">Měsíc ve dne</a>, která projekt veřejných lednic jako první podpořila. Postupně se veřejné lednice šíří po celé České republice, v současnosti je najdeme například v <a href="https://www.facebook.com/Ve%C5%99ejn%C3%A1-ledni%C4%8Dka-v-Plzni-972773322796452/">Plzni</a> nebo <a href="https://www.facebook.com/verejnalednicepraha/">Praze</a>.
+				</p>
+				<p>
+					Budeme velmi rádi, pokud se připojíte k projektu. Sledujte naše <a href="">stránky na FB</a> a náš <a href="">blog</a>.
 				</p>
 			</main>
 			<aside class="right">
@@ -46,22 +66,30 @@
 				</p>
 			</aside>
 			<aside class="left">
-				<p>
-					Lipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-				</p>
+				<div class="stripped_line"></div>
+<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fverejnalednice%2F&tabs=timeline&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=true&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>		
+
 			</aside>
 			<footer>				
 				<div class="footer_container">
 					<div class="footer_item1">
-						<div class="stripped_line"/>		
+						<div class="stripped_line"></div>		
 					</div>
 					<div class="footer_item2">
 						<div class="fic fi_card1">
-<script src='https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyAjjHxYvllxLCDlMno98jWLt1QqyIT3k88'></script><div style='overflow:hidden;height:295px;width:295px;margin:auto; border: 1px solid #c9c9c9;'><div id='gmap_canvas' style='height:295px;width:295px;'></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div> <a href='https://mapswebsite.net/'>embedding google map</a> <script type='text/javascript' src='https://embedmaps.com/google-maps-authorization/script.js?id=295afee8bcfa0201d490c4510d0469d6453c3e9d'></script><script type='text/javascript'>function init_map(){var myOptions = {zoom:15,center:new google.maps.LatLng(49.22584871144233,17.669227138622997),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(49.22584871144233,17.669227138622997)});infowindow = new google.maps.InfoWindow({content:'<strong>VŠ Kolej UTB</strong><br> VŠ kolej Štefánikova 150<br> Zlín<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
+
+<script src='https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyAjjHxYvllxLCDlMno98jWLt1QqyIT3k88'></script><div style='overflow:hidden;height:295px;width:295px;margin:auto; border: 1px solid #c9c9c9; -webkit-box-shadow: 0px 0px 10px 1px rgba(50, 50, 50, 0.24);
+-moz-box-shadow:    0px 0px 10px 1px rgba(50, 50, 50, 0.24);
+box-shadow:         0px 0px 10px 1px rgba(50, 50, 50, 0.24);'>
+
+							<!--<img src="map_placeholder.png" alt="Picture" style="position: relative; top: 0; left: 0; z-index: -1;">-->
+
+<div id='gmap_canvas' style='height:295px;width:295px;'></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div> <a href='https://mapswebsite.net/'>embedding google map</a> <script type='text/javascript' src='https://embedmaps.com/google-maps-authorization/script.js?id=295afee8bcfa0201d490c4510d0469d6453c3e9d'></script><script type='text/javascript'>function init_map(){var myOptions = {zoom:15,center:new google.maps.LatLng(49.22584871144233,17.669227138622997),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(49.22584871144233,17.669227138622997)});infowindow = new google.maps.InfoWindow({content:'<strong>VŠ Kolej UTB</strong><br> VŠ kolej Štefánikova 150<br> Zlín<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
+
 						</div>
 						<div class="fic fi_card2">
+							<h3>Otevřeno</h3>
 							<table>
-								<h3>Otevřeno</h3>
 								<tr id="stripped">
 									<td>Pondělí</td>
 									<td>nonstop</td>
@@ -119,8 +147,14 @@
 						</div>
 						<div class="fic fi_card4">
 
-							<h3>Lorem</h3>
-							4Lipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+							<h3>Dokumenty</h3>
+							<ul>
+								<a href="manifest.pdf" alt="Manifest"><li>manifest.pdf</li></a>
+								<p>Zásady a cíl projektu.</p>
+								<a href="vybrane_clanky.pdf" alt="Vybrané články"><li>vybrane_clanky.pdf</li></a>
+								<p>Zmínky o projektu v médiích.</p>
+							</ul>
+						</div>
 					</div>
 				</div>
 			</footer>
